deploy/templates/demo-minio/minio-http-proxy.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: minio-argo-console-httpproxy
  namespace: ${MINIO_BUCKET_NAMESPACE}
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: minio
          port: 9001
  virtualhost:
    fqdn: minio-console-argo.${DATA_E2E_FQDN_DOMAIN}
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: minio-argo-console-httpproxy
  namespace: ${MINIO_BUCKET_NAMESPACE}
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: minio
          port: 9000
  virtualhost:
    fqdn: minio-argo.${DATA_E2E_FQDN_DOMAIN}
